k8s/cert-ingress/static-files-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-files
  namespace: ceramic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-files
  template:
    metadata:
      labels:
        app: static-files
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: acme-challenge
          mountPath: /usr/share/nginx/html/.well-known/acme-challenge
          readOnly: true
      volumes:
      - name: acme-challenge
        configMap:
          name: acme-challenge
