k8s/cert-ingress/static-files-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-files-service
  namespace: ceramic
spec:
  type: ClusterIP
  selector:
    app: static-files
  ports:
    - port: 80
      targetPort: 80
