k8s/cert-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: composedb-ingress
  namespace: ceramic
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # if you're using cert-manager for SSL
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "example.com"
    # this is where the SSL certificate should be stored
    secretName: ceramic-tls-secret
  rules:
  - host: "example.com"
    http:
      paths:
      - path: /.well-known/acme-challenge
        pathType: Prefix
        backend:
          service:
            name: static-files-service # Your service name for static files
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: composedb
            port:
              number: 7007
